--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 VUE_APP_BACK_API=http://10.8.150.23:4005/
-#VUE_APP_BACK_API=http://vigentapi.saude.sp.gov.br
+#VUE_APP_BACK_API=https://capop-back.saude.sp.gov.br/
 #VUE_APP_BACK_API=http://localhost:4002/
